# gcache

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  blog-article-draft.md  blog-article.md  package.json  pnpm-lock.yaml  pyproject.toml  tasks.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: pre-commit.yaml  publish.yaml  release.yaml  test.yaml  typescript.yaml  validate-pr-title.yaml
docs/: blog-article-draft.md
gcache/: __init__.py  gcache.py
src/cachegalileo/: __init__.py  base.py  event_loop_thread.py  gcache.py
src/gcache/: __init__.py  base.py  config.py  event_loop_thread.py  exceptions.py  gcache.py
src/gcache/_internal/: __init__.py  cache_hit.py  cache_interface.py  constants.py  event_loop_thread.py  local_cache.py  metrics.py  noop_cache.py  redis_cache.py  state.py  wrappers.py
tests/: __init__.py  conftest.py  test_error_paths.py  test_event_loop_thread.py  test_gcache.py  test_redis_client_initialization.py  test_redis_event_loop_conflict.py
